<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jalaram Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cart">My Cart</string>
    <string name="title_activity_wish_list">WishList</string>
    <string name="title_activity_order">My Order</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_update_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_conform_order">ConformOrderActivity</string>
    <string name="title_activity_web_view">Online Payment</string>
    <string name="title_activity_pdf">View Order</string>

    <!--==== Home Page ===-->
    <string name="shop_by_category">Shop by Category</string>
    <string name="view_all">View All</string>
    <string name="top_seller">Top Seller</string>
    <string name="featured_author">Author</string>
    <string name="login">Login / Register</string>

    <!--==== SignUp ===-->
    <string name="firstname">Enter First Name</string>
    <string name="lname">Enter Last Name</string>
    <string name="Email">Enter Email</string>
    <string name="Password">Enter Password For Ex Xyz@123</string>
    <string name="mobileNo">Enter Mobile Number</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <!--==== SignUp ===-->

    <!--==== SignUp ===-->
    <string name="Name">Enter Name</string>
    <string name="Address">Enter Address</string>
    <string name="City">Enter City</string>
    <string name="Pincode">Enter Pincode</string>
    <string name="MobileNo">Enter Mobile Number</string>
    <string name="old_password">Enter Old Password For Ex Xyz@123</string>
    <string name="new_password">Enter New Password For Ex Xyz@123</string>
    <!--==== SignUp ===-->

    <!--==== SignIn ===-->
    <string name="uname">Enter UserName</string>
    <string name="Psw">Enter Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_otp">Verification</string>
    <string name="title_activity_reset">Reset Password</string>
    <!--==== SignIn ===-->

    <string name="RS">₹</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="title_activity_author_list">AuthorListActivity</string>
    <string name="title_activity_sub_category">SubCategoryActivity</string>
    <string name="title_activity_filter">Filters</string>
    <string name="title_activity_add_address">Add Address</string>
    <string name="title_activity_add_shipping_address">AddShippingAddress</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_order_placed">Order Placed</string>
    <string name="title_activity_order_shipped">Order Shipped</string>
    <string name="title_activity_order_delivered">Order Delivered</string>
    <string name="title_activity_search">Search</string>

    <string name="reload"><u>Reload page</u></string>
    <string name="title_activity_mobile_otp">MobileOTPActivity</string>
    <string name="title_activity_email_otp">EmailOTPActivity</string>
    <string name="title_activity_contact_us">Contact Us</string>

    <string name="address">Shop No A 4, Pramukh Arcade 2, Kudasan, Gandhinagar-Gujarat - 382421, Below Hotel City In</string>
    <string name="telephone">Telephone: 081417 38284</string>
    <string name="website">Website: www.jalarambookstore.com</string>
    <string name="email">Email: info@jalarambookstore.com</string>
    <string name="email2">Email: support@jalarambookstore.com</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="aboutus">Welcome to JALARAM BOOK STORE! Our mission is to ensure that new and expectant parents have everything they need to confidently welcome their baby and navigate the transitions of life as a family.\n\nIn the journey of parenthood there are fun parts and messy parts, celebrations and challenges, dreamy snuggles and sleepless nights. We’re thrilled to be here for you every step of the way, with helpful guidance and an amazing selection of everything from the best of the best baby gear along with everybody’s favourites – all at everyday low prices.\n\nVisit our store, where you can explore hundreds of products first-hand, and let our expert associates help you prepare for pregnancy, parenthood, toddler transitions, and everything in between.</string>
    <string name="title_activity_terms">Terms and Condition</string>
    <string name="title_activity_legal">LegalActivity</string>
    <string name="title_activity_return_policy">Return Policy</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_shipping_policy">Shipping Policy</string>
    <string name="title_activity_refund_policy">Refund &amp; Cancellation Policy</string>

    <string name="SP1"><b>Shipping Charges:</b> A fixed shipping charge of Rs. 69 is applicable on all orders below Or Equal Rs. 700/- (Excluding COD charges, Shipping charges, Taxes or value reduced after application of coupons or any other offer)\n</string>
    <string name="SP2"><b>Estimated Delivery Time:</b> For all areas serviced by reputed couriers, the delivery time would be within 3 to 4 business days of shipping (business days exclude Sundays and other holidays). However, items weighing over 2 kilos or high volume may take a couple of days longer to reach. For other areas the products will be shipped through Indian Postal Service and may take 1-2 weeks depending on location.\n</string>
    <string name="SP3"><b>Address Change:</b> You can change the delivery address of your order only if the order is in Confirmed or Pending status and none of the item(s) purchased in the order are shipped. However, if there are any variations in the charges/taxes (if any) applied for the original delivery address used while placing the order v/s the delivery address to be updated, the request for updating the delivery address might not be accepted.\n</string>
    <string name="SP4"><b>Hidden Charges (Sales tax, Octroi etc):</b> You will get the final price during check out. Our prices are all inclusive and you need not pay anything extra.\n</string>
    <string name="SP5"><b>International Locations:</b> Currently we do not deliver to locations outside India\n</string>
    <string name="SP6"><b>Tracking Packages:</b> We will mail you the name of the courier company and the tracking number of your consignment in your registered email address. In case you do not receive a mail from us within 48hrs of placing an order please check your spam folder. Tracking may not appear online for up to another 48 hours in some cases, so please wait until your package is scanned by the courier company.\n</string>
    <string name="SP7"><b>Non-availability on Delivery:</b> Our delivery partners will attempt to deliver the package thrice before it is returned back to our warehouse. Please provide your mobile number in the delivery address as it will help in making a faster delivery.\n\n* Valid only for owned stock. Shipping time may increase for third party shipments.</string>

    <string name="RP">At Jalaram Book Store, our aim is to provide 100% satisfaction to our customers. If for any reason you are not satisfied with the product, we are here to help. Following are the details of the return policy that is applicable for all the items sold on Jalaram Book Store:\n\nFor Return Purchase Order Query. Please Contact to Supporting Department \nEmail Address:-<b>support@jalarambookstore.com</b>\nContact Number<b>+8000247321</b>\n\n<b>Cloths &amp; Footwear:</b> 4 Days from Delivery Date.\n\n<b>Books &amp; CDs:</b> 2 Days from Delivery Date\n\n<b>Birthday:</b>  2 Days from Delivery Date\n\n<b>Other Products except products mentioned below</b>\nBaby Diapers, Health &amp; Baby Care, Baby Wipes, Baby Pacifiers, Cloth Diapers/Nappies, Medicine &amp; Thermometers, Diaper Rash Cream, Cleaners &amp; Detergents, Bottles &amp; Accessories, Mosquito Repellents &amp; Care, Breast Feeding, Teethers &amp; Soothers, Baby Food &amp; Infant Formula, Inner Wear &amp; Thermals, Maternity Accessories, Gift Certificate, Grooming, Maternity Lingerie, Soaps, Shampoos &amp; Body Wash, Maternity Personal Care, Baby Creams &amp; Ointments, Make Up &amp; Cosmetics, Lotions, Oils &amp; Powders Oral Care, Kids Food &amp; Nutritional Supplements, Toys &amp; Games. <b>No Refund.</b>\n\nPlease return your purchase in its original packaging with all the parts and freebies with your original receipt for a refund. Please make sure that the product(s) are properly packed when you are returning it.\n\nNo return Accepted for Hand to Hand Delivery Direct from Store.\n\nPlease note that if an Incorrect Product(s) is handed by you to our Courier Service Partner, Jalaram Book Store shall not be responsible for any loss/damage/theft caused to such Incorrect product while in transit or otherwise.\n\nIf any or all the products that were originally part of an order placed using a coupon or offer are returned then the coupon code/offer will no longer be applicable on the order. The benefit of the coupon/offer will also not be included in the refund. If the product(s) returned are part of any free offer such as Buy 2 get 1 free or Buy 1 get 1 free, all the products related to the offer have to be returned, as they have been purchased as part of a group offer.\n\nProducts purchased from Jalaram Book Store Store shall only be returned at the Store.\n\nFor the Return You Need to Send the Product to the Given Address\n\n<b>Jalaram Book Store </b>\nA-117 TO A-124, FIRST FLOOR SWAGAT RAINFOREST 2, \nOPP. SWAMINARAYAN DHAM,\nKUDASAN, GANDHINAGAR 382421.</string>



</resources>
