<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.HomeActivity"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    tools:showIn="@layout/app_bar_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slBannerSlider"
                android:layout_width="fill_parent"
                android:layout_height="210dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shop_by_category"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:layout_marginRight="4dp"
                        android:textStyle="bold|normal" />

                    <Button
                        android:id="@+id/btnViewAllCat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_view"
                        android:text="@string/view_all"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_view"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvCategoryList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_seller"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorGrey" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvSellerProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_color"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_author"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/btnViewAllAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_view"
                        android:text="@string/view_all"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorWhite"
                    android:padding="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvAuthorList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>